[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/HurtArea.gd" type="Script" id=1]

[node name="HurtArea" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
